--- a/.obsidian_ipad/snippets/obsidian_orange.css
+++ b/.obsidian_ipad/snippets/obsidian_orange.css
@@ -1486,7 +1486,7 @@ a[href*="obsidian://search"] {
 
 /* 暗黑模式下样式修改 */
 .theme-dark .workspace-ribbon {
-  background-color: unset;
+  background-color: var(--background-secondary-alt);
 }
 
 .theme-dark .titlebar-inner {
@@ -1503,7 +1503,7 @@ a[href*="obsidian://search"] {
 }
 
 .theme-dark  .workspace-split:not(.mod-right-split) .workspace-tabs {
-  background-color: unset;
+  background-color: var(--background-secondary-alt);
 }
 
 .theme-dark  .workspace-split.mod-left-split .workspace-tabs .workspace-leaf {
